--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000F5;
-	background-color: #51AF3A;
+	color: #000016;
+	background-color: #81AB27;
 }
 
 #muse_css_mq
@@ -529,8 +529,8 @@
 	width: 329px;
 	min-height: 229px;
 	background-color: transparent;
-	line-height: 46px;
 	color: #0092C4;
+	line-height: 46px;
 	text-align: center;
 	font-size: 38px;
 	font-family: bitter, serif;
