--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #00001B;
-	background-color: #34BDC5;
+	color: #0000EF;
+	background-color: #A901FB;
 }
 
 #muse_css_mq
@@ -13,12 +13,12 @@
 {
 	z-index: 1;
 	width: 942px;
-	min-height: 760.5px;
+	min-height: 760.6500000000001px;
 	background-image: none;
 	border-width: 0px;
 	border-color: #000000;
 	background-color: #333333;
-	padding-bottom: 1px;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -521,7 +521,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	padding-bottom: 2px;
 	margin-bottom: -1px;
 	position: relative;
@@ -567,6 +567,12 @@
 	margin: 2px -10000px 0px 0px;
 }
 
+#u4546-2
+{
+	padding-top: 76px;
+	visibility: hidden;/* 100% transparent text is hidden */
+}
+
 #u3749
 {
 	z-index: 71;
@@ -575,7 +581,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	padding-bottom: 1px;
 	position: relative;
 	margin-right: -10000px;
@@ -619,7 +625,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	padding-bottom: 1px;
 	position: relative;
 	margin-right: -10000px;
@@ -671,7 +677,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	margin-top: 24px;
 	position: relative;
 	background: #7F7F7F url("../images/karolinaraytk%20(home).jpg") no-repeat center center;
@@ -711,11 +717,6 @@
 	margin-right: -10000px;
 	margin-top: 16px;
 	margin-left: 992px;
-}
-
-#page_position_content,#pu3750,#pu4273-4
-{
-	width: 0.01px;/* should not cover content below */
 }
 
 #u4273-4
@@ -804,7 +805,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
@@ -847,7 +848,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
@@ -891,7 +892,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
@@ -951,7 +952,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
@@ -993,7 +994,7 @@
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
 	border-width: 1px;
-	border-color: #0093C4;
+	border-color: #E792C4;
 	margin-bottom: -1px;
 	position: relative;
 	margin-right: -10000px;
@@ -1010,6 +1011,18 @@
 	min-height: 0px;
 	margin: 0px -10000px -1px 0px;
 	background-size: cover;
+}
+
+#u3750:hover::before,#u3749:hover::before,#u4349:hover::before,#u3748:hover::before,#u3847:hover::before,#u3850:hover::before,#u3853:hover::before,#u4608:hover::before,#u5025:hover::before
+{
+	content: "";
+	position: absolute;
+	pointer-events: none;
+	top: -1px;
+	left: -1px;
+	bottom: -1px;
+	right: -1px;
+	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
 }
 
 #u5026-4
@@ -1057,23 +1070,24 @@
 #pu5167
 {
 	width: 0.01px;
-	margin-left: 79px;
-	margin-top: 13px;
+	margin-left: 77px;
+	margin-top: 11px;
 }
 
 #u5167
 {
 	z-index: 145;
-	width: 244px;
+	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
-	border-width: 1px;
-	border-color: #0093C4;
-	padding-bottom: 3px;
-	margin-bottom: -1px;
+	border-width: 14px;
+	border-color: #FFFFFF;
+	margin-bottom: -7px;
 	position: relative;
 	margin-right: -10000px;
+	margin-top: -7px;
+	left: -7px;
 	background: #FFFFFF url("../images/clown.png") no-repeat center center;
 	background-size: contain;
 }
@@ -1082,43 +1096,47 @@
 {
 	background-repeat: no-repeat;
 	background-position: center center;
-	width: 244px;
+	width: 231px;
 	min-height: 0px;
-	margin: 0px -10000px -1px 0px;
+	margin: -7px -10000px -7px 0px;
 	background-size: contain;
 }
 
 #u5169-4
 {
 	z-index: 150;
-	width: 239px;
-	min-height: 239px;
+	width: 238px;
+	min-height: 238px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
 	background-color: transparent;
 	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
 	font-family: bitter, serif;
 	font-weight: 400;
+	margin-bottom: -5px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 2px;
-	left: 2px;
+	margin-top: -4px;
+	left: -4px;
 }
 
 #u5170
 {
 	z-index: 154;
-	width: 244px;
+	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
-	border-width: 1px;
-	border-color: #0093C4;
-	padding-bottom: 3px;
-	margin-bottom: -1px;
+	border-width: 14px;
+	border-color: #FFFFFF;
+	margin-bottom: -7px;
 	position: relative;
 	margin-right: -10000px;
-	left: 269px;
+	margin-top: -7px;
+	left: 262px;
 	background: #FFFFFF url("../images/lion-face.jpg") no-repeat center center;
 	background-size: contain;
 }
@@ -1127,43 +1145,47 @@
 {
 	background-repeat: no-repeat;
 	background-position: center center;
-	width: 244px;
+	width: 231px;
 	min-height: 0px;
-	margin: 0px -10000px -1px 0px;
+	margin: -7px -10000px -7px 0px;
 	background-size: contain;
 }
 
 #u5171-4
 {
 	z-index: 155;
-	width: 239px;
-	min-height: 239px;
+	width: 238px;
+	min-height: 238px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
 	background-color: transparent;
 	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
 	font-family: bitter, serif;
 	font-weight: 400;
+	margin-bottom: -5px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 2px;
-	left: 2px;
+	margin-top: -4px;
+	left: -4px;
 }
 
 #u5172
 {
 	z-index: 159;
-	width: 244px;
+	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
 	border-style: solid;
-	border-width: 1px;
-	border-color: #0093C4;
-	padding-bottom: 3px;
-	margin-bottom: -1px;
+	border-width: 14px;
+	border-color: #FFFFFF;
+	margin-bottom: -7px;
 	position: relative;
 	margin-right: -10000px;
-	left: 537px;
+	margin-top: -7px;
+	left: 534px;
 	background: #FFFFFF url("../images/ice-cream2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -1172,53 +1194,219 @@
 {
 	background-repeat: no-repeat;
 	background-position: center center;
-	width: 244px;
+	width: 231px;
 	min-height: 0px;
-	margin: 0px -10000px -1px 0px;
+	margin: -7px -10000px -7px 0px;
 	background-size: cover;
-}
-
-#u3750:hover::before,#u3749:hover::before,#u4349:hover::before,#u3748:hover::before,#u3847:hover::before,#u3850:hover::before,#u3853:hover::before,#u4608:hover::before,#u5025:hover::before,#u5167:hover::before,#u5170:hover::before,#u5172:hover::before
-{
-	content: "";
-	position: absolute;
-	pointer-events: none;
-	top: -1px;
-	left: -1px;
-	bottom: -1px;
-	right: -1px;
-	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
 }
 
 #u5173-4
 {
 	z-index: 160;
-	width: 239px;
-	min-height: 239px;
+	width: 238px;
+	min-height: 238px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
 	background-color: transparent;
 	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
 	font-family: bitter, serif;
 	font-weight: 400;
+	margin-bottom: -5px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 2px;
-	left: 2px;
+	margin-top: -4px;
+	left: -4px;
 }
 
-#u5169-4:hover,#u5171-4:hover,#u5173-4:hover
+#pu5204
+{
+	width: 0.01px;
+	margin-left: 77px;
+	margin-top: 26px;
+}
+
+#u5204
+{
+	z-index: 164;
+	width: 231px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 14px;
+	border-color: #FFFFFF;
+	margin-bottom: -7px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: -7px;
+	left: -7px;
+	background: #FFFFFF url("../images/medal.png") no-repeat center center;
+	background-size: contain;
+}
+
+#u5204:hover
+{
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 231px;
+	min-height: 0px;
+	margin: -7px -10000px -7px 0px;
+	background-size: contain;
+}
+
+#u5205-4
+{
+	z-index: 165;
+	width: 238px;
+	min-height: 238px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	margin-bottom: -5px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: -4px;
+	left: -4px;
+}
+
+#u5210
+{
+	z-index: 169;
+	width: 231px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 14px;
+	border-color: #FFFFFF;
+	margin-bottom: -7px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: -7px;
+	left: 262px;
+	background: #FFFFFF url("../images/stars-2.png") no-repeat center center;
+	background-size: contain;
+}
+
+#u5210:hover
+{
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 231px;
+	min-height: 0px;
+	margin: -7px -10000px -7px 0px;
+	background-size: contain;
+}
+
+#u5211-4
+{
+	z-index: 170;
+	width: 238px;
+	min-height: 238px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	margin-bottom: -5px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: -4px;
+	left: -4px;
+}
+
+#u5216
+{
+	z-index: 174;
+	width: 231px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 14px;
+	border-color: #FFFFFF;
+	margin-bottom: -7px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: -7px;
+	left: 534px;
+	background: #FFFFFF url("../images/%d0%be%d1%80%d0%b4%d0%b5%d0%bd-sb.png") no-repeat center center;
+	background-size: contain;
+}
+
+#u5216:hover
+{
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 231px;
+	min-height: 0px;
+	margin: -7px -10000px -7px 0px;
+	background-size: contain;
+}
+
+#u5167:hover::before,#u5170:hover::before,#u5172:hover::before,#u5204:hover::before,#u5210:hover::before,#u5216:hover::before
+{
+	content: "";
+	position: absolute;
+	pointer-events: none;
+	top: -14px;
+	left: -14px;
+	bottom: -14px;
+	right: -14px;
+	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
+}
+
+#u5217-4
+{
+	z-index: 175;
+	width: 238px;
+	min-height: 238px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	background-color: transparent;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	margin-bottom: -5px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: -4px;
+	left: -4px;
+}
+
+#u5169-4:hover,#u5171-4:hover,#u5173-4:hover,#u5205-4:hover,#u5211-4:hover,#u5217-4:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
-	min-height: 239px;
-	width: 239px;
-	margin: 2px -10000px 0px 0px;
+	min-height: 238px;
+	width: 238px;
+	margin: -4px -10000px -5px 0px;
 }
 
-#u4546-2,#u5169-2,#u5171-2,#u5173-2
+#u5169-4:hover p,#u5171-4:hover p,#u5173-4:hover p,#u5205-4:hover p,#u5211-4:hover p,#u5217-4:hover p
 {
-	padding-top: 76px;
+	color: #FFFFFF;
+	visibility: inherit;
+	padding-top: 105px;
+	font-size: 19px;
+}
+
+#u5169-2,#u5171-2,#u5173-2,#u5205-2,#u5211-2,#u5217-2
+{
+	padding-top: 105px;
 	visibility: hidden;/* 100% transparent text is hidden */
 }
 
@@ -1234,8 +1422,8 @@
 	font-size: 25px;
 	font-family: bitter, serif;
 	font-weight: 400;
-	margin-left: 79px;
-	margin-top: 59px;
+	margin-left: 80px;
+	margin-top: 58px;
 	position: relative;
 }
 
@@ -1303,12 +1491,12 @@
 	margin: 3px -10000px 0px 0px;
 }
 
-#u4546-4:hover p,#u4549-4:hover p,#u4552-4:hover p,#u4555-4:hover p,#u4558-4:hover p,#u4561-4:hover p,#u4564-4:hover p,#u4619-4:hover p,#u5026-4:hover p,#u5169-4:hover p,#u5171-4:hover p,#u5173-4:hover p,#u4570-4:hover p
+#u4546-4:hover p,#u4549-4:hover p,#u4552-4:hover p,#u4555-4:hover p,#u4558-4:hover p,#u4561-4:hover p,#u4564-4:hover p,#u4619-4:hover p,#u5026-4:hover p,#u4570-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	font-size: 19px;
 	padding-top: 80px;
+	font-size: 19px;
 }
 
 #u4549-2,#u4552-2,#u4555-2,#u4558-2,#u4561-2,#u4564-2,#u4619-2,#u5026-2,#u4570-2
@@ -1348,14 +1536,13 @@
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-left: 80px;
-	margin-top: 39px;
+	margin-top: 29px;
 	position: relative;
 }
 
-#pu3093
+#page_position_content,#pu3750,#pu4273-4,#pu3093
 {
-	width: 0.01px;
-	margin-top: -1px;
+	width: 0.01px;/* should not cover content below */
 }
 
 #u3093
