--- a/css/site_global.css
+++ b/css/site_global.css
@@ -128,6 +128,12 @@ a.nontext /* used to override default properties of 'a' tag */
 	font-weight: normal;
 }
 
+.Black a
+{
+	color: inherit;
+	text-decoration: inherit;
+}
+
 .Black a:link
 {
 	color: #000000;
